--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "name": "my-website",
   "version": "1.0.0",
-  "description": "Website doanh nghiệp đơn giản",
   "private": true,
-  "scripts": {
-    "build": "tsc"
-  },
+  "scripts": {},
   "dependencies": {
     "@vercel/node": "^3.0.0",
     "@vercel/postgres": "^0.9.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.9.3"
   }
 }
