--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "@google-cloud/storage": "^7.18.0",
     "@sendgrid/mail": "^8.1.6",
     "@vercel/node": "^3.0.0",
     "@vercel/postgres": "^0.9.0",
